# 2024CapstoneDesign

./: README.md  how_to_use.txt
CAPSTONE/src/: a.out  main.cpp  pathRW.cpp  serial.cpp  serial.hpp
R2M/: confirm.py  pub.py  resistance_values.txt
arm_sim_pkgs/: CMakeLists.txt  package.xml
arm_sim_pkgs/launch/: arm.launch
arm_sim_pkgs/robot_arm/: model.config  model.sdf
arm_sim_pkgs/src/: CAPS.cpp  CAPS.h  arm_plugin.cc
arm_sim_pkgs/worlds/: arm.world
detail_arm_pkgs/: CMakeLists.txt  package.xml
detail_arm_pkgs/launch/: arm.launch
detail_arm_pkgs/src/: CAPS.cpp  CAPS.h  arm_plugin.cc
detail_arm_pkgs/urdf_assem/: CMakeLists.txt  model.config  model.sdf  package.xml
detail_arm_pkgs/worlds/: arm.world
ros2/: motorrun.sh
ros2/log/: latest_list
ros2/src/manipulator/: CMakeLists.txt  package.xml
ros2/src/manipulator/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/src/manipulator/install/manipulator/lib/manipulator/: manipulator  manipulator_read  manipulator_run  manipulator_write
ros2/src/manipulator/install/manipulator/share/ament_index/resource_index/parent_prefix_path/: manipulator
ros2/src/manipulator/install/manipulator/share/manipulator/: local_setup.sh  package.sh
ros2/src/manipulator/install/manipulator/share/manipulator/cmake/: manipulatorConfig.cmake
ros2/src/manipulator/log/: latest_build
ros2/src/manipulator/src/: dynamixel_protocols.cpp  dynamixel_protocols.hpp  motor.cpp  pathR.cpp  pathRW.cpp  pathRW.hpp  pathW.cpp  pthpath.txt  serial.cpp  serial.hpp
ros2/src/manipulator/src/paths/: K.pth  L.pth  R.pth  a.pth  aa.pth  ff.pth  h.pth  i.pth  k.pth  l.pth  q.pth  r.pth  rr.pth  ss.pth  u.pth  y.pth  ㅁㅁ.pth
src/: a.out  main.cpp  pathRW.cpp  pathRW.hpp  serial  serial.cpp  serial.hpp
src/paths/: first_path.pth
(+69 files in other folders)
